# semester-3-hws

./: .gitignore
CAPL/hw1/: CAPLHW01-solution.tex  CAPLHW01.tex  CAPLHW03-solution.tex
CAPL/hw10/: CAPLHW10-solution.tex
CAPL/hw11/: CAPLHW11-solution.tex
CAPL/hw12/: CAPLHW12-solution.tex
CAPL/hw2/: CAPLHW02-solution.tex
CAPL/hw4/: CAPLHW04-solution.tex
CAPL/hw5/: CAPLHW05-solution.tex
CAPL/hw6/: CAPLHW06-solution.tex
CAPL/hw7/: CAPLHW07-solution.tex
CAPL/hw8/: CAPLHW08-solution.tex
CAPL/hw9/: CAPLHW09-solution.tex
CC/hw8/: CCHW08-solution.tex
CC/hw9/: CCHW09-solution.tex
CC/hw9/program/: Makefile  README.md  main.cpp
CG/hw1/: CGHW01-solution.tex
CG/hw2/: README.md  references.txt
CG/hw2-backup/p2/: .gitignore
CG/hw2/p1/: .gitignore  Makefile  human.cpp
CG/hw2/p2/: Makefile  mypurercode.c
CG/hw2/p3/: .gitignore  Makefile  README.md  hello_texture.cpp
CN/hw1/: CSHW01-solution.tex  h1-to-h2.txt  h3-to-h4.txt
CN/hw2/: CNHW02-solution.tex
CN/hw3/: .ping.txt.swp  2.txt  README  pingstatistics.txt  script-a.py  script-b.py
CN/hw4/a/: f1-bird.conf  f2-bird.conf  f3-bird.conf  f4-bird.conf  p4-net.py
CN/hw5/: CNHW05-solution.tex
CN/hw6/: CNHW06-solution.tex
DBWS/hw1/: DBWSHW01-solution.tex
FLL/hw1/: FLLHW01.tex
FLL/hw11/: FLLHW11-solution.tex
FLL/hw2/: CAPLHW02.tex
FLL/hw3/: FLLHW03-solution.tex
FLL/hw4/: FLLHW04-solution.tex
FLL/hw6/: FLLHW06-solution.tex
FLL/hw7/: FLLHW07-solution.tex
FLL/hw8/: FLLHW08-solution.tex
OS/bounded-buffer-problem/: Makefile  main  main.c
OS/curses/: Makefile  main  main.c
OS/filesystems/: main  main.c
OS/hw1/1a/: scat  scat.c
OS/hw1/1c/: scat  scat.c
OS/hw1/2/: watch  watch.c
OS/hw2/: CMakeLists.txt  Makefile  main  main.c
OS/hw3/: CMakeLists.txt  Makefile  runner  runner.c
OS/hw4/: OSHW04-solution.tex
OS/hw5/: Makefile  connections.c  connections.h  guess-server.c  tcp.c  tcp.h
OS/hw6/: OSHW06-solution.tex
OS/named-pipes/: main_read  main_read.c  main_write  main_write.c
OS/philosophers/: Makefile  main  main.c
OS/pipes/: main  main.c
OS/popen/: Makefile  popen  popen.c
OS/semaphores/: main  main.c
OS/signal-alarm/: main  main.c  main.c~
OS/signal-handler/: sighandler  sighandler.c
OS/signal-shell/: main  main.c
OS/signals/: Makefile  signals  signals.c
OS/snake/: dlist.c  dlist.h  main  main.c  snake.c  snake.h
SADS/hw1/src/: rpn.c
SADS/hw1/test/: CMakeLists.txt  check_rpn-stack.c  check_rpn.c
SADS/hw2/: SDSHW02-solution.tex
SADS/hw3/: SADSHW03-solution.tex
SADS/hw4/scrypt/: .gitignore  CMakeLists.txt
SADS/hw4/scrypt/src/: CMakeLists.txt  main.c  scrypt.c  scrypt.h
SADS/hw4/scrypt/test/: CMakeLists.txt  check-scrypt.c
SADS/hw5/: SADSHW05-solution.tex
SADS/hw5/CA (copy)/: cacert.pem  index.txt  my-public-key.pem
SADS/hw5/CA (copy)/newcerts/: 1234.pem
SADS/hw5/CA (copy)/private/: my-private-key.pem
SADS/hw5/CA (copy)/requests/: my-csr-file.csr
SADS/hw6/pnmhide/: .gitignore  README.md
SADS/hw6/pnmhide/doc/: Doxyfile.in
SADS/hw6/pnmhide/src/: CMakeLists.txt  hide.c  image.h  (+1 more)
SDS/hw1/: .gitgnore  CMakeLists.txt  README
SDS/hw1/src/: CMakeLists.txt  rpn-stack.c  rpn-stack.h  rpn.h
SDS/hw1/tests/: CMakeLists.txt  check_rpn-stack.c
(+1 files in other folders)
